The user is now greeted on the home page and a table containing his motorcycles is being shown.